  * Add Spanish debconf translations, thanks to Javier Fernández-Sanguino
    Peña! Closes: #402198
  * pg_createcluster: Add --locale and the various --lc_* options that initdb
    supports, and mention in POD that directly setting --encoding is not
    recommended. Closes: #395083
  * t/050_encodings.t: Use pg_createcluster's new --locale option in some test
    cases.

 -- Martin Pitt <mpitt@debian.org>  Sat,  9 Dec 2006 14:01:08 +0100

postgresql-common (68) unstable; urgency=low

  * debian/supported-versions: Add Debian 4.0. Closes: #399978
  * debian/postgresql-common.postinst: Use adduser option --quiet for adding
    postgres to ssl-cert. Closes: #399979
  * pg_createcluster: Enable timestamps in log files by default. Other system
    log files have timestamps, too, and they are useful. Closes: #395554
  * t/040_upgrade.t: Fix number of tests if oldest installed PostgreSQL
    version is < 8.0.

 -- Martin Pitt <mpitt@debian.org>  Fri, 24 Nov 2006 21:01:30 +0100

postgresql-common (67) unstable; urgency=low

  *t/040_upgrade.t: Skip the user/group name clash test when there are only
   servers >= 8.1 installed, since it does not apply to them and breaks the
   test suite.
  * t/040_upgrade.t: Check that the upgraded cluster still works after
    removing the old one, to check for stale paths of configuration files.
  * pg_upgradecluster: Adapt path to configuration files in the target
    cluster, so that they do not refer to the files of the old cluster. (This
    fixes an upgrade regression introduced in version 62).
  * debian/supported-versions: Add Ubuntu 7.04.
  * Add Italian debconf translations. Thanks to Luca Monducci
    <luca.mo@tiscali.it>! Closes: #396947

 -- Martin Pitt <mpitt@debian.org>  Thu, 16 Nov 2006 00:11:58 -0800

postgresql-common (66) unstable; urgency=low

  * Add Japanese debconf translations. Thanks to Hideki Yamane!
    Closes: #393055
  * pg_upgradecluster: Use -X no-data-for-failed-tables only for 8.1. In