@@ -7,7 +7,12 @@ use strict;
 use lib 't';
 use TestLib;
 
-use Test::More tests => 12 + $#MAJORS * 9;
+use Test::More tests => ($#MAJORS == 0) ? 1 : (12 + $#MAJORS * 9);
+
+if ($#MAJORS == 0) {
+    pass 'only one major version installed, skipping upgrade tests';
+    exit 0;
+}
 
 # postgresql.conf configuration file with all available options turned on
 my %fullconf;
