@@ -6,7 +6,12 @@ use strict;
 use lib 't';
 use TestLib;
 
-use Test::More tests => 33;
+use Test::More tests => ($#MAJORS == 0) ? 1 : 33;
+
+if ($#MAJORS == 0) {
+    pass 'only one major version installed, skipping upgrade tests';
+    exit 0;
+}
 
 use lib '/usr/share/postgresql-common';
 use PgCommon;
